fix!: footer was displayed on mobile

--- a/src/assets/styles/variables.scss
+++ b/src/assets/styles/variables.scss
@@ -7,5 +7,6 @@ $success-color: #64c72b;
 
 $inner-width: 580px;
 $header-height: 8.5vh;
+$header-height-mobile: 60px;
 $footer-height: 90px;
 $chat-width: 330px;
